--- a/index.html
+++ b/index.html
@@ -289,11 +289,11 @@ img {
       <section>
 
         <a target="_bLank"
-            href="https://rank-fortress-digital-agency.github.io/syntheticturftc-01-22/">https://rank-fortress-digital-agency.github.io/syntheticturftc-01-22/</a><br>
+            href="https://rank-fortress-digital-agency.github.io/syntheticturftc-02-22/">https://rank-fortress-digital-agency.github.io/syntheticturftc-02-22/</a><br>
         <a target="_bLank"
-            href="http://syntheticturftc-01-22.s3-website-ap-southeast-1.amazonaws.com/">http://syntheticturftc-01-22.s3-website-ap-southeast-1.amazonaws.com/</a><br>
+            href="http://syntheticturftc-02-22.s3-website-us-west-2.amazonaws.com/">http://syntheticturftc-02-22.s3-website-us-west-2.amazonaws.com/</a><br>
         <a target="_bLank"
-            href="https://visionary-selkie-65ab36.netlify.app/">https://visionary-selkie-65ab36.netlify.app/</a>
+            href="https://zippy-kringle-311c71.netlify.app/">https://zippy-kringle-311c71.netlify.app/</a>
 
       </section>
 
